
[package]
authors = ["William Chan <root@williamchan.me>"]
edition = "2024"
name = "node_ping_rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "3"
tokio = { version = "1", features = ["full"] }
surge-ping = "0.8"
dns-lookup = "2.0"
rand = "0.8"


[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
